commit - estilizando com css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
-MusicDot
+<!DOCTYPE html>
+<html>
 
-  Bem-vindo à MusicDot, seu portal de cursos de música online.
+<head>
+  <meta charset="utf-8">
+  <title>Sobre a MusicDot</title>
 
-  Confira nossas promoções.
-  Receba informações sobre nossos lançamentos por email.
-  Navegue por todos nossos cursos disponíveis.
-  Aprenda sem sair de casa.
+  <!-- Inclusão do arquivo CSS -->
+  <link rel="stylesheet" href="estilos.css">
+
+</head>
+
+<body>
+  <p>
+    O conteúdo desta tag será exibido em azul com fundo amarelo!
+  </p>
+  <p>
+    <strong>Também</strong> será exibido em azul com fundo amarelo!
+  </p>
+
+  <p>
+    MusicDot
+  </p>
+
+  <p>
+    Bem-vindo à MusicDot, seu portal de cursos de música online.
+  </p>
+
+  <p>
+    Confira nossas promoções.
+    Receba informações sobre nossos lançamentos por email.
+    Navegue por todos nossos cursos disponíveis.
+    Aprenda sem sair de casa.
+  </p>
+
+</body>
+
+</html>
