commit - usando classes

--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
 
   <img src="img/logo.svg" alt="MusicDot">
 
-  <h1>Sobre a empresa</h1>
+  <h1 class="titulo">Sobre a empresa</h1>
 
   <p>
     A MusicDot é a maior escola online de música em todo o mundo.
@@ -24,8 +24,8 @@
   </p>
 
   <p>
-    Nossa matriz fica em <a href="https://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC"> Mafra, em Santa Catarina
-    </a>. De lá, saem grande parte das gravações de nossos cursos. Nossa
+    Nossa matriz fica em <a href="https://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC">Mafra, em Santa Catarina.</a>
+    De lá, saem grande parte das gravações de nossos cursos. Nossa
     matriz:
   </p>
 
@@ -38,11 +38,11 @@
 
   <p>
     Assine os cursos da MusicDot. Acesse <a href="index_prov.html">nosso site</a> ou entre em contato
-    se tiver dúvidas. Conheça também <a href="#historia"> nossa história </a> e <a href="#diferenciais">nossos
+    se tiver dúvidas. Conheça também <a href="#historia">nossa história</a> e <a href="#diferenciais">nossos
       diferenciais</a>.
   </p>
 
-  <h2 id="historia">História</h2>
+  <h2 id="historia" class="subtitulo">História</h2>
 
   <figure class="familia-tupfeln">
     <img src="img/familia-tupfeln.jpg" alt="Foto da família tüpfeln">
@@ -76,7 +76,7 @@
     presidentes da União Européia, Ásia e o secretário-geral da ONU.
   </p>
 
-  <h2 id="diferenciais"> Diferenciais </h2>
+  <h2 id="diferenciais" class="subtitulo"> Diferenciais </h2>
   <ul>
     <li> Menor preço do mercado, garantido </li>
     <li> Se você achar um serviço mais barato, leva 1 mês de graça </li>
@@ -87,6 +87,8 @@
     <li> Presente em 124 países </li>
     <li> Mais de um milhão de funcionários em todo o mundo </li>
   </ul>
+
+  <h2 class="titulo"> Contato </h2>
 
 </body>
 
