--- a/sobre.html
+++ b/sobre.html
@@ -90,10 +90,11 @@
 
   <h2 class="titulo"> Contato </h2>
 
-  <h3> Correspondência </h3>
+  <h3 class="contato__subtitulo"> Correspondência </h3>
    <small> (todos os dias, das 9h às 18h) </small>
 
-<address>AOVS Sistemas de Informática S.A
+<address class="contato__info">
+  AOVS Sistemas de Informática S.A
 <br>
 Rua Vergueiro, 3185, 8º andar
 <br>
@@ -102,9 +103,10 @@ Vila Mariana
 São Paulo - SP
 </address>
 
-<h3> Telefones (segunda à sexta, das 9h às 18h) </h3>
+<h3 class="contato__subtitulo"> Telefones </h3>
+<small> (segunda à sexta, das 9h às 18h) </small> 
 
-<dl>
+<dl class="contato__info">
 <dt> Pessoa Física: </dt>
 <dd> <a href="tel://114118-3319"> (11) 4118-3319 </a> </dd>
 
