--- a/sobre.html
+++ b/sobre.html
@@ -90,6 +90,7 @@
 
   <h2 class="titulo"> Contato </h2>
 
+  <div class="contato__secao">
   <h3 class="contato__subtitulo"> Correspondência </h3>
    <small> (todos os dias, das 9h às 18h) </small>
 
@@ -102,7 +103,9 @@ Vila Mariana
 <br>
 São Paulo - SP
 </address>
+</div>
 
+<div class="contato__secao contato__secao--telefone">
 <h3 class="contato__subtitulo"> Telefones </h3>
 <small> (segunda à sexta, das 9h às 18h) </small> 
 
@@ -117,6 +120,7 @@ São Paulo - SP
      <dd class="contato__info-descricao"> <a href="tel://114118-2172"> (11) 4118-2172 </a> </dd>
      </div>
 </dl>
+</div>
 
 </body>
 
